Fixed the scrollbar
Fixed the scrollbar issue on login and register

--- a/Carrot/src/app/login/login.component.css
+++ b/Carrot/src/app/login/login.component.css
@@ -59,6 +59,10 @@
     /* background of page start*/
     /* background of page end*/
     /* box for all the fields start*/
+
+    ::-webkit-scrollbar { 
+        display: none; 
+    }
     
     .box {
         margin-top: 20px;
