--- a/Carrot/src/app/registration/registration.component.css
+++ b/Carrot/src/app/registration/registration.component.css
@@ -9,6 +9,10 @@
 
 /* box for all the fields start*/
 
+::-webkit-scrollbar { 
+    display: none; 
+}
+
 .box {
     margin-top: 20px;
     margin-bottom: 20px;
